# shorturl

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.specify/memory/: constitution.md
.windsurf/workflows/: speckit.taskstoissues.md
db/: schema.surql
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
frontend/src/lib/components/: CopyButton.svelte  ShortResultCard.svelte  StatusBanner.svelte
frontend/src/lib/server/: config.ts
frontend/src/lib/services/: shorten.ts
frontend/src/lib/stores/: shortening.ts
frontend/src/lib/utils/: validation.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[shortCode]/: +page.server.ts  +page.svelte
frontend/src/routes/api/shorten/: +server.ts
frontend/static/: site.webmanifest
specs/001-build-backend-service/: plan.md  spec.md  tasks.md
specs/002-svelte-frontend/: plan.md  research.md  spec.md  tasks.md
specs/002-svelte-frontend/checklists/: requirements.md
src/: main.rs
src/config/: env.rs  logging.rs
src/db/: mod.rs  schema.rs  url_mapping_repo.rs
src/models/: mod.rs  url_mapping.rs
src/routes/: create_short_url.rs  create_short_url_tests.rs  mod.rs  redirect.rs
src/services/: mod.rs  url_shortener.rs  url_shortener_tests.rs  url_validation.rs
tests/: integration_create_short_url_test.rs  integration_invalid_url_tests.rs  unit_url_shortener_tests.rs
