[package]
name = "shorturl"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
surrealdb = { version = "2", features = ["kv-rocksdb"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
nanoid = "0.4"
url = "2"
thiserror = "1"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
